--- a/.eslintrc
+++ b/.eslintrc
@@ -3,11 +3,16 @@ import reactHooks from "eslint-plugin-react-hooks";
 import reactRefresh from "eslint-plugin-react-refresh";
 import globals from "globals";
 import tseslint from "typescript-eslint";
+import prettier from "eslint-plugin-prettier";
 
 export default tseslint.config(
   { ignores: ["dist"] },
   {
-    extends: [js.configs.recommended, ...tseslint.configs.recommended,"prettier"],
+    extends: [
+      js.configs.recommended,
+      ...tseslint.configs.recommended,
+      "prettier" // prettier와 충돌하는 규칙 비활성화
+    ],
     files: ["**/*.{ts,tsx}"],
     languageOptions: {
       ecmaVersion: 2020,
@@ -16,6 +21,7 @@ export default tseslint.config(
     plugins: {
       "react-hooks": reactHooks,
       "react-refresh": reactRefresh,
+      "prettier": prettier, // prettier 플러그인 추가
     },
     rules: {
       ...reactHooks.configs.recommended.rules,
@@ -23,6 +29,7 @@ export default tseslint.config(
         "warn",
         { allowConstantExport: true },
       ],
+      "prettier/prettier": "error" // Prettier와 충돌하는 부분을 오류로 표시
     },
   },
 );
