chore: file alias setting, eslint/prettier setting

--- a/.prettierrc
+++ b/.prettierrc
@@ -26,7 +26,7 @@
   "endOfLine": "lf",
   "printWidth": 80,
   "tabWidth": 2,
-  "semi": false,
+  "semi": true,
   "singleQuote": false,
   "useTabs": false,
   "singleAttributePerLine": true,
