--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-tsconfig-paths": "^5.1.2"
   }
 }
